[package]
name = "ether_alloy"
version = "0.1.0"
edition = "2024"

[lib]
name = "ether_blockchain"
path = "src/lib.rs"

[dependencies]
alloy = { version = "1.5.2", default-features = false, features = ["reqwest", "contract", "sol-types", "signer-mnemonic", "network", "rpc-types"] }
tokio = { version = "1.48.0", default-features = false, features = ["time"] }
futures = "0.3.31"
anyhow = "1.0.100"
log = "0.4.29"
url = "2.5.8"

# dotenvy = "0.15.7"
# hex = "0.4.3"
rand = "0.8"
# rand_core = "0.6"
# serde_json = "1.0.145"
zeroize = "1.8.2"