[package]
name = "ether_alloy"
version = "0.1.0"
edition = "2024"

[lib]
name = "ether_blockchain"
path = "src/lib.rs"

[dependencies]
alloy = { version = "2.1.0", default-features = false, features = ["reqwest", "contract", "sol-types", "signer-mnemonic", "network", "rpc-types"] }
tokio = { version = "1.52.1", default-features = false, features = ["time"] }
futures = "0.3.32"
anyhow = "1.0.102"
log = "0.4.20"
url = "2.5.8"

# dotenvy = "0.15.7"
# hex = "0.4.3"
rand = "0.8.5"
# rand_core = "0.6"
# serde_json = "1.0.145"
zeroize = "1.9.0"
